tests/baselines/reference/overloadsWithComputedNames.errors.txt
overloadsWithComputedNames.ts(4,5): error TS2389: Function implementation name must be '["B"]'.
overloadsWithComputedNames.ts(14,5): error TS2391: Function implementation is missing or not immediately following the declaration.
overloadsWithComputedNames.ts(16,5): error TS2389: Function implementation name must be '["bar"]'.
overloadsWithComputedNames.ts(29,5): error TS2391: Function implementation is missing or not immediately following the declaration.
overloadsWithComputedNames.ts(52,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== overloadsWithComputedNames.ts (5 errors) ====
    // https://github.com/microsoft/TypeScript/issues/52329
    class Person {
        ["B"](a: number): string;
        ["A"](a: string|number): number | string {
        ~~~~~
!!! error TS2389: Function implementation name must be '["B"]'.
          return 0;
        }
    }
    let p = new Person();
    p.A(0)
    p.B(0)
    
    // https://github.com/microsoft/TypeScript/issues/17345
    class C {
        ["foo"](): void
        ~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        ["bar"](): void;
        ["foo"]() {
        ~~~~~~~
!!! error TS2389: Function implementation name must be '["bar"]'.
            return 0;
        }
    }
    
    declare const uniqueSym: unique symbol;
    declare const uniqueSym2: unique symbol;
    declare const sym: symbol;
    
    declare const strUnion: 'foo' | 'bar';
    
    class C1 {
        [sym](): void;  // should error
        [uniqueSym2](): void;   // should error
        ~~~~~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        [uniqueSym](): void;
        [uniqueSym]() { }
    }
    
    interface I1 {
        [sym](): void;  // should error
        [uniqueSym2](): void;
        [uniqueSym](): void;
        [uniqueSym](): void;
    }
    
    class C2 {
        [strUnion](): void; // should error
        [strUnion]() { }
    }
    
    class I2 {
        [strUnion](): void; // should error
        [strUnion]() { }
    }
    
    class C3 {
        [1](): void;  // should error
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        [2](): void;
        [2]() { }
    }
    
    interface I3 {
        [1](): void;
        [2](): void;
        [2](): void;
    }